# agents-bootcamp

./: .gitignore  Dockerfile  pyproject.toml
chatppt/: chatppt-v0.1.ipynb  chatppt-v0.2.ipynb
chatppt/src/: content_formatter.py  logger.py
language-mentor/: language-mentor-v0.1.ipynb  language-mentor-v0.2.ipynb  language-mentor-v0.4.ipynb
multi-agents/: multi_agent.ipynb
reflection/: testcase_reflection.ipynb
summary/: course_summary.md
