[project]
name = "agents-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argilla==2.8.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "build==1.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "dataclasses-json==0.6.7",
    "datasets==4.5.0",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "durationpy==0.10",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "filelock==3.20.3",
    "flatbuffers==25.12.19",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.1",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.3.7",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.13.0",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kubernetes==35.0.0",
    "langchain-chroma==1.1.0",
    "langchain-classic==1.0.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.8",
    "langchain-deepseek>=1.0.1",
    "langchain-openai==1.1.7",
    "langchain-text-splitters==1.1.0",
    "langsmith==0.6.8",
    "lxml==6.0.2",
    "markdown==3.10.1",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.2",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "nltk==3.9.2",
    "numpy==2.4.2",
    "oauthlib==3.3.1",
    "onnxruntime==1.23.2",
    "openai==2.16.0",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.7",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.5",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "posthog==5.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyarrow==23.0.0",
    "pybase64==1.4.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pypandoc==1.16.2",
    "pypika==0.51.0",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-magic==0.4.27",
    "python-pptx==1.0.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.2",
    "rpds-py==0.30.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.46",
    "stack-data==0.6.3",
    "standardwebhooks==1.0.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "tornado==6.5.4",
    "tqdm==4.67.2",
    "traitlets==5.14.3",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "types-deprecated==1.3.1.20260130",
    "types-python-dateutil==2.9.0.20260124",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "unstructured==0.5.6",
    "urllib3==2.6.3",
    "uuid-utils==0.14.0",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "wcwidth==0.5.3",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "wrapt==2.1.0",
    "xlsxwriter==3.2.9",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
